--- a/EE3206_WPF/Pages/Management/Managment.xaml
+++ b/EE3206_WPF/Pages/Management/Managment.xaml
@@ -22,27 +22,31 @@
     <Grid Background="#262537">
         <Grid.RowDefinitions>
             <RowDefinition />
-            <RowDefinition Height="100" />
+            <RowDefinition Height="80" />
         </Grid.RowDefinitions>
+        <components1:PopUpWindow CloseEnv="popwindow_CloseEnv"  Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Grid.Column="1" >
+
+        </components1:PopUpWindow>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="640"/>
+                <ColumnDefinition Width="640"/>
             </Grid.ColumnDefinitions>
-            <ListBox Grid.Column="0" BorderThickness="1,0,0,1"  Name="productdata" Background="Transparent">
+            <ListBox Width="640" Grid.Column="0" BorderThickness="1,1,1,1"  Name="productdata" Background="Transparent">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <components1:ServiceDetail DeleteListItem="Product_DeleteButton"  Width="800" Title="Product Name" />
+                        <components1:ServiceDetail ID="{Binding ID}" SubTitle="{Binding productName}" Price="{Binding price}" DeleteListItem="Product_DeleteButton"  Width="600" Title="Product Name" />
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <ListBox Grid.Column="1"  BorderThickness="1,0,0,1" Name="servicedata" Background="Transparent">
+            <ListBox Width="640" Grid.Column="1"  BorderThickness="1,1,1,1" Name="servicedata" Background="Transparent">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <components1:ServiceDetail DeleteListItem="Service_DeleteButton"  Width="800" Title="Service Name" />
+                        <components1:ServiceDetail ID="{Binding ID}" SubTitle="{Binding serviceName}" Price="{Binding price}" DeleteListItem="Service_DeleteButton"  Width="600" Title="Service Name" />
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
+        <components1:BrowseBackButton Grid.Row="1"/>
     </Grid>
 </Page>
