--- a/EE3206_WPF/Components/ServiceDetail.xaml
+++ b/EE3206_WPF/Components/ServiceDetail.xaml
@@ -72,6 +72,9 @@
                 <ColumnDefinition Width="195*"></ColumnDefinition>
                 <ColumnDefinition Width="143*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            <Border Margin="6" Width="160" CornerRadius="18" Background="WhiteSmoke" Grid.Column="1">
+                <Image x:Name="someImage" Source="/Images/product/RAM.jpg" ></Image>
+            </Border>
             <StackPanel VerticalAlignment="Center" Height="60">
                 <TextBlock HorizontalAlignment="Center" Foreground="#A500FE" Text="ID" FontFamily="Akrobat SemiBold" FontSize="24"/>
                 <TextBlock HorizontalAlignment="Center" Foreground="White" Text="{Binding ID,ElementName=shopdetail}" FontFamily="Akrobat SemiBold" FontSize="24"/>
