--- a/EE3206_WPF/Pages/UserLogin/UserLogin.xaml
+++ b/EE3206_WPF/Pages/UserLogin/UserLogin.xaml
@@ -42,28 +42,28 @@
                         <RowDefinition Height="60"/>
 
                     </Grid.RowDefinitions>
-                    <components1:CustomeUserInput Grid.Row="0">
-                        <components1:CustomeUserInput.Icon>
+                    <components1:TextInput x:Name="_UserName" Grid.Row="0">
+                        <components1:TextInput.Icon>
                             <Path  Data="{StaticResource User}" Width="28"/>
-                        </components1:CustomeUserInput.Icon>
-                    </components1:CustomeUserInput>
+                        </components1:TextInput.Icon>
+                    </components1:TextInput>
 
-                    <components1:CustomeUserInput Grid.Row="2">
+                    <components1:CustomeUserInput x:Name="_UserPassword" Grid.Row="2">
                         <components1:CustomeUserInput.Icon>
                             <Path   Data="{StaticResource pass}" Width="28"/>
                         </components1:CustomeUserInput.Icon>
                     </components1:CustomeUserInput>
                 </Grid>
-                <components1:RoundButton Grid.Row="2" ButtonTilte="Login" >
+                <components1:RoundButton Submitclick="RoundButton_Submitclick" Grid.Row="2" ButtonTilte="Login" >
 
                 </components1:RoundButton>
 
             </Grid >
             <TextBlock Margin="0,0,0,40" Width="339" HorizontalAlignment="Center" Grid.Row="2" FontSize="24" Foreground="White">Create new Account :
-            <Hyperlink Foreground="#BB68E4" TextDecorations="none">Click Here</Hyperlink>
+            <Hyperlink x:Name="_userRegLink" Foreground="#BB68E4" TextDecorations="none">Click Here</Hyperlink>
             </TextBlock>
             <TextBlock Foreground="White" Margin="0,0,0,40" Width="450" HorizontalAlignment="Center" Grid.Row="3" FontSize="24" >Click Here For Login as Admini
-            <Hyperlink Foreground="#BB68E4" TextDecorations="none">Click Here</Hyperlink>
+            <Hyperlink  x:Name="_adminLogLink" Foreground="#BB68E4" TextDecorations="none">Click Here</Hyperlink>
             </TextBlock>
         </Grid>
         <Rectangle  Grid.Column="1">
@@ -72,6 +72,6 @@
                 </ImageBrush>
             </Rectangle.Fill>
         </Rectangle>
-
+        <components1:PopUpWindow CloseEnv="popwindow_CloseEnv"  Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Grid.ColumnSpan="2" Margin="415,0,415,0" />
     </Grid>
 </Page>
