--- a/EE3206_WPF/Pages/AdminLogin/AdminLogin.xaml
+++ b/EE3206_WPF/Pages/AdminLogin/AdminLogin.xaml
@@ -42,18 +42,18 @@
                         <RowDefinition Height="40"/>
                         <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
-                    <components1:CustomeUserInput  Grid.Row="0">
-                        <components1:CustomeUserInput.Icon>
-                            <Path  Data="{StaticResource User}" Width="28"/>
-                        </components1:CustomeUserInput.Icon>
-                    </components1:CustomeUserInput>
-                    <components1:CustomeUserInput Grid.Row="2">
+                    <components1:TextInput x:Name="_adminemail"  Grid.Row="0">
+                        <components1:TextInput.Icon>
+                            <Path  Data="{StaticResource Email}" Width="28"/>
+                        </components1:TextInput.Icon>
+                    </components1:TextInput>
+                    <components1:CustomeUserInput x:Name="_adminpassword"  Grid.Row="2">
                         <components1:CustomeUserInput.Icon>
                             <Path   Data="{StaticResource pass}" Width="28"/>
                         </components1:CustomeUserInput.Icon>
                     </components1:CustomeUserInput>
                 </Grid>
-                <components1:RoundButton Grid.Row="2" ButtonTilte="Login" >
+                <components1:RoundButton Submitclick="RoundButton_Submitclick" Grid.Row="2" ButtonTilte="Login" >
                 </components1:RoundButton>
             </Grid >
             <TextBlock Margin="0,0,0,40" Width="366" HorizontalAlignment="Center" Grid.Row="2" FontSize="24" Foreground="White">Go Back To User Login 
@@ -69,6 +69,7 @@
                 </ImageBrush>
             </Rectangle.Fill>
         </Rectangle>
+        <components1:PopUpWindow CloseEnv="popwindow_CloseEnv" Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Grid.ColumnSpan="2" Margin="415,0,415,0" />
     </Grid>
 
 
