--- a/EE3206_WPF/Pages/UserList/UserList.xaml
+++ b/EE3206_WPF/Pages/UserList/UserList.xaml
@@ -1,15 +1,14 @@
-﻿<Page x:Class="EE3206_WPF.Pages.AdminList.AdminList"
+﻿<Page x:Class="EE3206_WPF.Pages.UserList.UserList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:EE3206_WPF.Pages.AdminList"
+      xmlns:local="clr-namespace:EE3206_WPF.Pages.UserList"
       mc:Ignorable="d" 
-      d:DesignHeight="720" d:DesignWidth="1280"
-      Title="AdminList"
-      x:Name="AdminList_view"
+     d:DesignHeight="720" d:DesignWidth="1280"
+      Title="UserList"
       xmlns:components1="clr-namespace:EE3206_WPF.Components">
-    
+
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -32,7 +31,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <components1:PopUpWindow CloseEnv="popwindow_CloseEnv"  Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Grid.Column="1" >
+
         </components1:PopUpWindow>
     </Grid>
 </Page>
-
