--- a/EE3206_WPF/Windows/AdminWindow.xaml
+++ b/EE3206_WPF/Windows/AdminWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="EE3206_WPF.Windows.UserWindow"
+﻿<Window x:Class="EE3206_WPF.Windows.AdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EE3206_WPF.Windows"
         mc:Ignorable="d"
-        Title="UserWindow" Height="840" Width="1280">
+        Title="AdminWindow"  Height="840" Width="1280">
     <Grid Background="#262537">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -20,22 +20,19 @@
                 <ColumnDefinition Width="70"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            
-       
-                <Border Grid.Column="1" Background="AliceBlue" Width="70" Height="70" CornerRadius="100">
-                    <Ellipse Height="60" Width="60">
-                        <Ellipse.Fill>
-                            <ImageBrush x:Name="Imagebr" ></ImageBrush>
-                        </Ellipse.Fill>
-                    </Ellipse>
-                </Border>
-                <TextBlock x:Name="_userName" Grid.Column="2" Margin="80,0,0,0" VerticalAlignment="Center" Foreground="White" Text="" FontFamily="Akrobat Black" FontSize="24"/>
+
+
+            <Border Grid.Column="1" Background="AliceBlue" Width="70" Height="70" CornerRadius="100">
+                <Ellipse Height="60" Width="60">
+                    <Ellipse.Fill>
+                        <ImageBrush x:Name="Imagebr" ></ImageBrush>
+                    </Ellipse.Fill>
+                </Ellipse>
+            </Border>
+            <TextBlock x:Name="_userName" Grid.Column="2" Margin="80,0,0,0" VerticalAlignment="Center" Foreground="White" Text="" FontFamily="Akrobat Black" FontSize="24"/>
 
         </Grid>
-        <Frame x:Name="_FrameName" NavigationUIVisibility="Hidden" Grid.Row="3" Source="/Pages/UserDashBoard/UserDashBoard.xaml">
-
-
-
+        <Frame x:Name="_FrameName" NavigationUIVisibility="Hidden" Grid.Row="3" Source="/Pages/AdminDashBoard/AdminDashBoard.xaml">
         </Frame>
 
     </Grid>
